--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "twbs/bootstrap": "^4",
         "components/jquery": "^3",
-        "components/font-awesome": "^5"
+        "components/font-awesome": "^5",
+        "phpmailer/phpmailer": "~6.1"
     },
     "autoload":
     {
